bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")

# buildifier (Starlark formatter) is always available — the `aspect buildifier`
# task and the format.alias in .aspect/config.axl use it regardless of lint.
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")

# Prebuilt aspect gazelle binary (no Go toolchain needed) — provides
# //tools/gazelle:gazelle, the default target for `aspect gazelle`.
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.20")

# NB: 2.7.0's sarif_parser toolchain is missing the linux_amd64 platform key
# (breaks lint/format on Linux CI: "key sarif_parser-linux_amd64 not found").
# Stay on 2.6.0 until that's fixed upstream.
bazel_dep(name = "aspect_rules_lint", version = "2.7.1")

# bazel_skylib's native_binary backs //tools/lint's linter wrappers.
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# go preset uses rules_go directly; the lint preset needs this floor too because
# aspect_rules_lint -> rules_buf transitively pulls an ancient rules_go (0.42.0)
# whose cgo.bzl references the removed CcInfo symbol and fails to load.
bazel_dep(name = "rules_go", version = "0.61.1")

# Pinned to match the LLVM toolchain below (registered for the same condition).
# toolchains_llvm 1.8.0's generated cc_toolchain selects on the rules_cc target
# `//cc/toolchains/args/archiver_flags:use_libtool_on_macos_setting`, which
# rules_cc 0.2.19 renamed away — so 0.2.18 is the newest compatible version.
# Without this, macOS analysis fails: "no such target ...use_libtool_on_macos_setting".
bazel_dep(name = "rules_cc", version = "0.2.18")

# Hermetic C++ toolchain. Also needed by rust+lint: it links rules_rust's
# process_wrapper, overriding the broken minimal LLVM aspect_rules_lint_rust
# registers (see the llvm.toolchain() block below).
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

###############################################################################
# Module extensions
###############################################################################

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Hermetic C++ toolchain, to relieve the dependency on a locally installed CC etc.
# Also required by the rust+lint preset: aspect_rules_lint_rust registers a
# minimal LLVM C++ toolchain (@llvm//toolchain:all) that can't link rules_rust's
# process_wrapper on Linux ("unable to find library -lgcc_s"). Registering this
# fuller toolchain from the root module takes priority and fixes that link.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    # clang 19 — clang 15 can't parse the macOS 15 SDK's libc++ headers
    # ("unknown type name '__remove_cv'"). 19.1.7 is the last 19.1.x patch that
    # ships linux-x64 + darwin-arm64 + darwin-x64, so one entry covers all.
    llvm_versions = {
        "": "19.1.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands")
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

register_toolchains("//bazel/toolchains:all")
